<resources>
    <string name="app_name">T5_A3_Calculadora</string>

    <string name="txt_caja">0</string>

    <string name="txt_btn_residuo"><![CDATA[%]]></string>
    <string name="txt_btn_raiz"><![CDATA[√]]></string>
    <string name="txt_btn_potencia"><![CDATA[×²]]></string>
    <string name="txt_btn_ln"><![CDATA[1/x]]></string>

    <string name="txt_btn_borrar_t">CE</string>
    <string name="txt_btn_borrar"><![CDATA[<=]]></string>
    <string name="txt_btn_div"><![CDATA[÷]]></string>

    <string name="txt_btn_7">7</string>
    <string name="txt_btn_8">8</string>
    <string name="txt_btn_9">9</string>
    <string name="txt_btn_mul"><![CDATA[×]]></string>

    <string name="txt_btn_4">4</string>
    <string name="txt_btn_5">5</string>
    <string name="txt_btn_6">6</string>
    <string name="txt_btn_res">-</string>

    <string name="txt_btn_1">1</string>
    <string name="txt_btn_2">2</string>
    <string name="txt_btn_3">3</string>
    <string name="txt_btn_sum">+</string>

    <string name="txt_btn_punto">.</string>
    <string name="txt_btn_0">0</string>
    <string name="txt_btn_igual">=</string>

</resources>