<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/txt_caja"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bResiduo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_residuo"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bRaiz"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_raiz"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/bResiduo"
        app:layout_constraintTop_toTopOf="@+id/bResiduo"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bPotencia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_potencia"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/bRaiz"
        app:layout_constraintTop_toTopOf="@+id/bRaiz"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bLn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_ln"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/bPotencia"
        app:layout_constraintTop_toTopOf="@+id/bPotencia"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bBorrarT"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_borrar_t"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bResiduo"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bBorrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_borrar"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/bBorrarT"
        app:layout_constraintTop_toTopOf="@+id/bBorrarT"
        app:layout_constraintWidth_percent="0.50" />

    <Button
        android:id="@+id/bDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_div"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/bBorrar"
        app:layout_constraintTop_toTopOf="@+id/bBorrar"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_7"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bBorrarT"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_8"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/bBorrarT"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_9"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toTopOf="@+id/b8"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bMul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_mul"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b9"
        app:layout_constraintTop_toTopOf="@+id/b9"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_4"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_5"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toTopOf="@+id/b4"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_6"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toTopOf="@+id/b5"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bRes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_res"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toTopOf="@+id/b6"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_1"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_2"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toTopOf="@+id/b1"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/b3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_3"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toTopOf="@+id/b2"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bSum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_sum"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toTopOf="@+id/b3"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/bPunto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_punto"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent=".13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/b0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_0"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent=".13"
        app:layout_constraintStart_toEndOf="@+id/bPunto"
        app:layout_constraintTop_toTopOf="@+id/bPunto"
        app:layout_constraintWidth_percent=".25" />

    <Button
        android:id="@+id/bIgual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#EDECEB"
        android:text="@string/txt_btn_igual"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintHeight_percent=".13"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toTopOf="@+id/b0"
        app:layout_constraintWidth_percent=".50" />

</androidx.constraintlayout.widget.ConstraintLayout>